<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="100">

        <TextView
            android:id="@+id/recipeViewName"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="13dp"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="@string/recipe_name_text_view" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:gravity="center"
                android:text="Category"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/recipeViewCategory"
                android:layout_weight="50"/>

            <TextView
                android:gravity="center"
                android:text="Estimated Time"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/recipeViewEstimatedTime"
                android:layout_below="@+id/listCategory"
                android:layout_weight="50"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/recipeViewIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="@string/recipe_ingredients_text_view"/>

    <TextView
        android:id="@+id/recipeViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeViewIngredients"
        tools:text="@string/recipe_text_text_view"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:onClick="goToEditScreen"/>

</androidx.constraintlayout.widget.ConstraintLayout>